<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="65dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Widget"
                android:textColor="@color/purple_500"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#D1D1D1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_application"
                android:textColor="@color/purple_500"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_passlock"
                    android:textColor="@color/black_text"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_passlock"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_applicationLanguage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language"
                    android:textColor="@color/black_text"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/txt_applicationLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="50dp"
                    android:text="@string/applicationLanguage_english"
                    android:textColor="@color/silver_text"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_shareApp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:text="@string/title_shareApp"
                android:textColor="@color/black_text"/>

            <TextView
                android:id="@+id/txt_rateApp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:text="@string/title_review"
                android:textColor="@color/black_text"/>

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>