<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_language"
                android:textColor="@color/black_text"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="15dp"/>


            <TextView
                android:id="@+id/txt_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicationLanguage_english"
                android:textColor="@color/black_text"
                android:padding="7dp"
                android:layout_marginTop="20dp"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CACACA"
                android:layout_marginLeft="7dp"/>

            <TextView
                android:id="@+id/txt_vietNam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicationLanguage_vietNam"
                android:textColor="@color/black_text"
                android:layout_marginTop="17dp"
                android:padding="7dp"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CACACA"
                android:layout_marginLeft="7dp"/>




        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>